camo-derive/tests/cases/enum_named_fields.rs
use camo_derive::Camo;

#[derive(Camo)]
enum Foo {
    One { a: i32, b: i32 },
}

fn main() {}
